# indexio

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.datalad/: config
.github/workflows/: docs.yml
.projio/: config.yml  projio.mk
docs/: index.md
docs/explanation/: architecture.md  ecosystem-links.md  ecosystem.md  index.md  status.md
docs/how-to/: build.md  chat.md  index.md  init.md  query.md  register-sources.md
docs/log/idea/: idea-arash-20260312-163249-548902.md  idea-arash-20260312-175539-442171.md  index.md
docs/reference/: api.md  cli.md  configuration.md  index.md
docs/tutorials/: index.md  quickstart.md
site/: 404.html  index.html
site/explanation/: index.html
site/explanation/architecture/: index.html
site/explanation/ecosystem/: index.html
site/how-to/: index.html
site/how-to/chat/: index.html
site/how-to/init/: index.html
site/how-to/query/: index.html
site/how-to/register-sources/: index.html
site/log/: index.html
site/log/commit/: index.html
site/log/daily/: index.html
site/log/idea/: index.html
site/log/idea/idea-arash-20260312-163249-548902/: index.html
site/log/idea/idea-arash-20260312-175539-442171/: index.html
site/log/issue/: index.html
site/log/meeting/: index.html
site/log/personal/: index.html
site/log/weekly/: index.html
site/reference/: index.html
site/reference/api/: index.html
site/reference/cli/: index.html
site/reference/configuration/: index.html
site/search/: search_index.json
site/tutorials/: index.html
site/tutorials/quickstart/: index.html
src/indexio/: __init__.py  build.py  chunkers.py  cli.py  config.py  edit.py  graph.py  query.py
src/indexio/chat/: __init__.py  app.py  models.py  pipeline.py  settings.py
src/indexio/chat/static/: chatbot.css  chatbot.js
tests/: conftest.py  test_chunkers.py  test_graph.py  test_indexio.py  test_indexio_chat.py
