[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "indexio"
version = "0.1.0"
description = "Lightweight semantic indexing and retrieval for project knowledge sources"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Arash" }]
license = { text = "MIT" }
keywords = ["rag", "embeddings", "chromadb", "semantic-search", "indexing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "pyyaml>=6",
    "langchain-text-splitters>=0.3",
    "langchain-chroma>=0.2",
    "langchain-huggingface>=0.1",
]

[project.optional-dependencies]
code = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]
chat = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
]
dev = ["pytest", "twine", "build", "mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
indexio = "indexio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"indexio.chat" = ["static/*"]
